--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -297,7 +297,7 @@ We will thus verify on a neuroimaging dataset, and discuss the causes for this p
 % Power of SVM versus SD.
 % Difficulties of implementation.
 
-Figure~\ref{fig:read_data} is an application of our battery of tests to the data of \cite{pernet_human_2015}. 
+Figure~\ref{fig:read_data} is an application of both a location and an accuracy test to the data of \cite{pernet_human_2015}. 
 The authors of \cite{pernet_human_2015} collected fMRI data while subjects were exposed to the sounds of human speech (vocal), and other non-vocal sounds. 
 Each subject was exposed to $20$ sounds of each type, totalling in $n=40$ trials in each scan.
 The study was rather large and consisted of about $200$ subjects.
