--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -464,8 +464,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \includegraphics[width=1\linewidth]{"art/2016-07-29 07:18:24"}
 	  \caption{20 Folds.} %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}
