--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -491,4 +491,78 @@ Contact: wfu@stat.tamu.edu},
   pmid = {15691862}
 }
 
+@article{bzdok_neuroimaging_2016,
+  title = {Neuroimaging {{Research}}: {{From Null-Hypothesis Falsification}} to {{Out}}-of-sample {{Generalization}}},
+  shorttitle = {Neuroimaging {{Research}}},
+  abstract = {Brain imaging technology has boosted the quantification of neurobiological phenomena underlying human mental operations and their disturbances. Since its inception, drawing inference on neurophysiological effects hinged on classical statistical methods, especially, the general linear model. The tens of thousands variables per brain scan were routinely tackled by independent statistical tests on each voxel. This circumvented the curse of dimensionality in exchange for neurobiologically imperfect observation units, a challenging multiple comparisons problem, and limited scaling to currently growing data repositories. Yet, the always-bigger information granularity of neuroimaging data repositories has lunched a rapidly increasing adoption of statistical learning algorithms. These scale naturally to high-dimensional data, extract models from data rather than prespecifying them, and are empirically evaluated for extrapolation to unseen data. The present paper portrays commonalities and differences between long-standing classical inference and upcoming generalization inference relevant for conducting neuroimaging research.},
+  timestamp = {2016-07-31T15:42:35Z},
+  urldate = {2016-07-31},
+  journal = {Educational and Psychological Measurement},
+  author = {Bzdok, Danilo and Varoquaux, Ga{\"e}l and Thirion, Bertrand},
+  month = aug,
+  year = {2016},
+  file = {Bzdok et al_2016_Neuroimaging Research.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/SVUEEE65/Bzdok et al_2016_Neuroimaging Research.pdf:application/pdf;HAL Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/SCITXXGU/hal-01338313.html:text/html}
+}
+
+@article{wu_genome-wide_2009-1,
+  title = {Genome-wide association analysis by lasso penalized logistic regression},
+  volume = {25},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/btp041},
+  abstract = {Motivation: In ordinary regression, imposition of a lasso penalty makes continuous model selection straightforward. Lasso penalized regression is particularly advantageous when the number of predictors far exceeds the number of observations.
+Method: The present article evaluates the performance of lasso penalized logistic regression in case\textendash{}control disease gene mapping with a large number of SNPs (single nucleotide polymorphisms) predictors. The strength of the lasso penalty can be tuned to select a predetermined number of the most relevant SNPs and other predictors. For a given value of the tuning constant, the penalized likelihood is quickly maximized by cyclic coordinate ascent. Once the most potent marginal predictors are identified, their two-way and higher order interactions can also be examined by lasso penalized logistic regression.
+Results: This strategy is tested on both simulated and real data. Our findings on coeliac disease replicate the previous SNP results and shed light on possible interactions among the SNPs.
+Availability: The software discussed is available in Mendel 9.0 at the UCLA Human Genetics web site.
+Contact: klange@ucla.edu
+Supplementary information: Supplementary data are available at Bioinformatics online.},
+  language = {en},
+  timestamp = {2016-07-31T16:33:16Z},
+  number = {6},
+  urldate = {2016-07-31},
+  journal = {Bioinformatics},
+  author = {Wu, Tong Tong and Chen, Yi Fang and Hastie, Trevor and Sobel, Eric and Lange, Kenneth},
+  month = mar,
+  year = {2009},
+  pages = {714--721},
+  file = {Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/Q3ZNM95I/Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/J3FEGJ9X/714.html:text/html},
+  pmid = {19176549}
+}
+
+@article{wager_fmri-based_2013,
+  title = {An {{fMRI-Based Neurologic Signature}} of {{Physical Pain}}},
+  volume = {368},
+  issn = {0028-4793},
+  doi = {10.1056/NEJMoa1204471},
+  abstract = {The experience of pain is poorly understood. The authors describe a neurologic signature that discriminates between the sensations of painful heat and nonpainful heat, is specific to physical pain, and is responsive to the analgesic agent remifentanil.},
+  timestamp = {2016-07-31T16:47:07Z},
+  number = {15},
+  urldate = {2016-07-31},
+  journal = {New England Journal of Medicine},
+  author = {Wager, Tor D. and Atlas, Lauren Y. and Lindquist, Martin A. and Roy, Mathieu and Woo, Choong-Wan and Kross, Ethan},
+  month = apr,
+  year = {2013},
+  pages = {1388--1397},
+  file = {Wager et al_2013_An fMRI-Based Neurologic Signature of Physical Pain.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/B4KJHPBJ/Wager et al_2013_An fMRI-Based Neurologic Signature of Physical Pain.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/8UDMPBKV/NEJMoa1204471.html:text/html},
+  pmid = {23574118}
+}
+
+@article{gabrieli_prediction_2015,
+  title = {Prediction as a {{Humanitarian}} and {{Pragmatic Contribution}} from {{Human Cognitive Neuroscience}}},
+  volume = {85},
+  issn = {0896-6273},
+  doi = {10.1016/j.neuron.2014.10.047},
+  abstract = {Neuroimaging has greatly enhanced the cognitive neuroscience understanding of the human brain and its variation across individuals (neurodiversity) in both health and disease. Such progress has not yet, however, propelled changes in educational or medical practices that improve people's lives. We review neuroimaging findings in which initial brain measures (neuromarkers) are correlated with or predict future education, learning, and performance in children and adults; criminality; health-related behaviors; and responses to pharmacological or behavioral treatments. Neuromarkers often provide better predictions (neuroprognosis), alone or in combination with other measures, than traditional behavioral measures. With further advances in study designs and analyses, neuromarkers may offer opportunities to personalize educational and clinical practices that lead to better outcomes for people.},
+  language = {English},
+  timestamp = {2016-07-31T16:47:10Z},
+  number = {1},
+  urldate = {2016-07-31},
+  journal = {Neuron},
+  author = {Gabrieli, John D. E. and Ghosh, Satrajit S. and Whitfield-Gabrieli, Susan},
+  month = jan,
+  year = {2015},
+  pages = {11--26},
+  file = {Gabrieli et al_2015_Prediction as a Humanitarian and Pragmatic Contribution from Human Cognitive.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/2DQVWC6B/Gabrieli et al_2015_Prediction as a Humanitarian and Pragmatic Contribution from Human Cognitive.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/BVW7PT6C/S0896-6273(14)00967-2.html:text/html},
+  pmid = {25569345, 25569345}
+}
+
 
