--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -354,6 +354,7 @@ At this point some reservations to the generality of our findings are in order.
 Firstly, not all accuracy tests are concerned with signal detection.
 Indeed, it is possible that the purpose of the test is not to detect a difference between classes, but to actually test is a particular classifier is better than chance. 
 This would be the case, for instance, with brain-machine interfaces, where the detection of a signal is not enough \citep{olivetti_induction_2012}. 
+Another example is the search for an objective measure of pain \citep{wager_fmri-based_2013}, in which case the accuracy test was called upon not to localize pain regions, but rather to select those where pain can actually be decoded with a given classifier. 
 In such cases, the performance of a particular classifier is the object of study, rendering the accuracy test the appropriate choice. 
 
 Secondly, there may be cases where the accuracy test does have more power then the location test. 
