--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -80,6 +80,10 @@ We call this an \emph{accuracy test}, a.k.a.\ \emph{class prediction} in \cite{s
 
 This same signal detection task can be also approached as a two-group multivariate test:
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
+As put in \cite{pereira_machine_2009}: 
+\begin{quote}
+... the problem of deciding whether the classifier learned to discriminate the classes can be subsumed into the more general question as to whether there is evidence that the underlying distributions of each class are equal or not.
+\end{quote}
 A practitioner may then call upon a two-group location test such as Hotelling's $T^2$ \citep{fujikoshi_multivariate_2011}.
 Alternatively, if the size of the brain region is too large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{srivastava_testing_2013} or \cite{schafer_shrinkage_2005}.
 In contrast to \emph{accuracy tests}, we call these \emph{location tests}, a.k.a. \emph{class comparison} in \cite{simon_pitfalls_2003}.
