--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -565,4 +565,65 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   pmid = {25569345, 25569345}
 }
 
+@article{olivetti_statistical_2014,
+  title = {Statistical independence for the evaluation of classifier-based diagnosis},
+  volume = {2},
+  issn = {2198-4018, 2198-4026},
+  doi = {10.1007/s40708-014-0007-6},
+  abstract = {Machine learning techniques are increasingly adopted in computer-aided diagnosis. Evaluation methods for classification results that are based on the study of one or more metrics can be unable to distinguish between cases in which the classifier is discriminating the classes from cases in which it is not. In the binary setting, such circumstances can be encountered when data are unbalanced with respect to the diagnostic groups. Having more healthy controls than pathological subjects, datasets meant for diagnosis frequently show a certain degree of unbalancedness. In this work, we propose to recast the evaluation of classification results as a test of statistical independence between the predicted and the actual diagnostic groups. We address the problem within the Bayesian hypothesis testing framework. Different from the standard metrics, the proposed method is able to handle unbalanced data and takes into account the size of the available data. We show experimental evidence of the efficacy of the approach both on simulated data and on real data about the diagnosis of the Attention Deficit Hyperactivity Disorder (ADHD).},
+  language = {en},
+  timestamp = {2016-07-31T18:57:51Z},
+  number = {1},
+  urldate = {2016-07-31},
+  journal = {Brain Informatics},
+  author = {Olivetti, Emanuele and Greiner, Susanne and Avesani, Paolo},
+  month = dec,
+  year = {2014},
+  pages = {13--19},
+  file = {Olivetti et al_2014_Statistical independence for the evaluation of classifier-based diagnosis.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/WKF38NPF/Olivetti et al_2014_Statistical independence for the evaluation of classifier-based diagnosis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/79SXWP64/s40708-014-0007-6.html:text/html}
+}
+
+@article{gretton_kernel_2012,
+  title = {A {{Kernel Two-Sample Test}}},
+  volume = {13},
+  issn = {ISSN 1533-7928},
+  timestamp = {2016-07-31T19:09:11Z},
+  number = {Mar},
+  urldate = {2016-07-31},
+  journal = {Journal of Machine Learning Research},
+  author = {Gretton, Arthur and Borgwardt, Karsten M. and Rasch, Malte J. and Sch{\"o}lkopf, Bernhard and Smola, Alexander},
+  year = {2012},
+  pages = {723--773},
+  file = {Gretton et al_2012_A Kernel Two-Sample Test.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/GSTU3PBK/Gretton et al_2012_A Kernel Two-Sample Test.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/FE27P35Z/gretton12a.html:text/html}
+}
+
+@incollection{vayatis_auc_2009,
+  title = {{{AUC}} optimization and the two-sample problem},
+  timestamp = {2016-07-31T19:08:49Z},
+  urldate = {2016-07-31},
+  booktitle = {Advances in {{Neural Information Processing Systems}} 22},
+  publisher = {{Curran Associates, Inc.}},
+  author = {Vayatis, Nicolas and Depecker, Marine and Cl{\'e}men{\c c}con, St{\'e}phan J.},
+  editor = {Bengio, Y. and Schuurmans, D. and Lafferty, J. D. and Williams, C. K. I. and Culotta, A.},
+  year = {2009},
+  pages = {360--368},
+  file = {Vayatis et al_2009_AUC optimization and the two-sample problem.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/72UPSU78/Vayatis et al_2009_AUC optimization and the two-sample problem.pdf:application/pdf;NIPS Snapshort:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/FS3AZ8MR/3838-auc-optimization-and-the-two-sample-problem.html:text/html}
+}
+
+@article{casella_assessing_2009,
+  title = {Assessing {{Robustness}} of {{Intrinsic Tests}} of {{Independence}} in {{Two-Way Contingency Tables}}},
+  volume = {104},
+  issn = {0162-1459},
+  doi = {10.1198/jasa.2009.tm08106},
+  timestamp = {2016-07-31T19:11:46Z},
+  number = {487},
+  urldate = {2016-07-31},
+  journal = {Journal of the American Statistical Association},
+  author = {Casella, George and Moreno, El{\'\i}as},
+  month = sep,
+  year = {2009},
+  pages = {1261--1271},
+  file = {Casella_Moreno_2009_Assessing Robustness of Intrinsic Tests of Independence in Two-Way Contingency.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/B4AFMUVH/Casella_Moreno_2009_Assessing Robustness of Intrinsic Tests of Independence in Two-Way Contingency.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/6UJABK53/jasa.2009.html:text/html}
+}
+
 
