--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -359,7 +359,7 @@ This also explains why an asymptotic analysis, such as \cite{ramdas_classificati
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
 We did not include this test in the battery we compared, but we note the following: 
 (a) The independence test of \cite{olivetti_statistical_2014} relies on a discrete test statistic. This means that in the cases that the accuracy test is called upon for discriminating populations, it will probably be underpowered compared to location tests. 
-(b) Some of the drawbacks of accuracy test, which the independence test remedies, can also be remedied by replacing the accuracy statistic with its z-score, as suggested in Section~\ref{sec:estimate_accuracy}.
+(b) The problem of the accuracy test with unbalanced data-sets, which motivates \cite{olivetti_statistical_2014}'s independence test, can also be remedied by replacing the accuracy statistic with its z-score, as suggested in Section~\ref{sec:estimate_accuracy}.
 
 At this point some reservations to the generality of our findings are in order. 
 Firstly, not all accuracy tests are concerned with signal detection.
